--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import './styles/bootstrap-rtl/css/bootstrap.min.css';
+
+@import './assets/css/bootstrap.min.css';
+@import './assets/css/iransans.css';
+@import './assets/css/site.css';
