updated root html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,27 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Under Construction!
-  </h1>
-</div>
+<header class="sitehead mb-auto">
+  <div class="inner">
+    <h3 class="sitehead-brand">
+      #کامپیوترنخون
 
+    </h3>
+    <nav class="nav nav-sitehead justify-content-center">
+      <a class="nav-link active" href="#">خانه</a>
+      <a class="nav-link" href="#">این چیست؟</a>
+      <a class="nav-link" href="#">تماس با ما</a>
+    </nav>
+  </div>
+</header>
+
+<main role="main" class="inner cover">
+
+  <div class="contents">
+    <app-note>loading...</app-note>
+  </div>
+
+
+</main>
+<footer class="sitefoot mt-auto">
+  <div class="inner">
+    <p>#کامپیوترنخون - ۱۳۹۷‌ | تمامی حقوق محفوظ است.
+  </div>
+</footer>
