added sample model

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,7 @@
 </header>
 
 <main role="main" class="inner cover">
-
-  <div class="contents">
-    <app-note>loading...</app-note>
-  </div>
+    <app-note class="contents">loading...</app-note>
 
 
 </main>
