--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,3 +1,4 @@
-<p>
-  note works!
-</p>
+<div class="tweet" *ngFor="let note of notes; let isFirst = first" [class.active]="isFirst">
+  <h1 class="cover-heading">{{note.content}}</h1>
+  <h3 class="lead">{{note.author}}</h3>
+</div>
