design bug fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,27 @@
-<header class="sitehead mb-auto">
-  <div class="inner">
-    <h3 class="sitehead-brand">
-      #کامپیوترنخون
+<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+  <header class="sitehead mb-auto">
+    <div class="inner">
+      <h3 class="sitehead-brand">
+        #کامپیوترنخون
 
-    </h3>
-    <nav class="nav nav-sitehead justify-content-center">
-      <a class="nav-link active" href="#">خانه</a>
-      <a class="nav-link" href="#">این چیست؟</a>
-      <a class="nav-link" href="#">تماس با ما</a>
-    </nav>
-  </div>
-</header>
+      </h3>
+      <nav class="nav nav-sitehead justify-content-center">
+        <a class="nav-link active" href="#">خانه</a>
+        <a class="nav-link" href="#">این چیست؟</a>
+        <a class="nav-link" href="#">تماس با ما</a>
+      </nav>
+    </div>
+  </header>
 
-<main role="main" class="inner cover">
+  <main role="main" class="inner cover">
     <app-note class="contents">loading...</app-note>
 
 
-</main>
-<footer class="sitefoot mt-auto">
-  <div class="inner">
-    <p>#کامپیوترنخون - ۱۳۹۷‌ | تمامی حقوق محفوظ است.
-  </div>
-</footer>
+  </main>
+  <footer class="sitefoot mt-auto">
+    <div class="inner">
+      <p>#کامپیوترنخون - ۱۳۹۷‌ | تمامی حقوق محفوظ است.
+    </div>
+  </footer>
+
+</div>
