--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,4 +1,9 @@
-<div class="tweet active">
-  <h1 class="cover-heading">{{notes[selectedIndex].content}}</h1>
-  <h3 class="lead">{{notes[selectedIndex].author}}</h3>
+<div *ngIf="isLoaded; else loading">
+  <div class="tweet active">
+    <h1 class="cover-heading">{{notes[selectedIndex].content}}</h1>
+    <h3 class="lead">{{notes[selectedIndex].author}}</h3>
+  </div>
 </div>
+<ng-template #loading>
+  Loading...
+</ng-template>
