--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -5,5 +5,7 @@
   </div>
 </div>
 <ng-template #loading>
-  Loading...
+  <div class="cssload-container">
+    <div class="cssload-whirlpool"></div>
+  </div>
 </ng-template>
