--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,11 +1,13 @@
-<div *ngIf="isLoaded; else loading">
-  <div class="tweet active">
-    <h1 class="cover-heading">{{notes[selectedIndex].content}}</h1>
-    <h3 class="lead">{{notes[selectedIndex].author}}</h3>
+<div class="contents">
+  <div *ngIf="isLoaded; else loading">
+    <div class="tweet active">
+      <h1 class="cover-heading">{{notes[selectedIndex].content}}</h1>
+      <h3 class="lead">{{notes[selectedIndex].author}}</h3>
+    </div>
   </div>
+  <ng-template #loading>
+    <div class="cssload-container">
+      <div class="cssload-whirlpool"></div>
+    </div>
+  </ng-template>
 </div>
-<ng-template #loading>
-  <div class="cssload-container">
-    <div class="cssload-whirlpool"></div>
-  </div>
-</ng-template>
